# LEI-CG-24-25

./: .gitignore  CMakeLists.txt  Makefile
delivery/phase1/: markdown.css
delivery/phase1/scene1/: config.xml
delivery/phase2/: markdown.css
delivery/phase2/solar-system/: config.xml
delivery/phase3/: markdown.css
delivery/phase3/solar-system/: config.xml
delivery/phase4/: markdown.css
delivery/phase4/demo/: bezier_10.3d  box_2_3.3d  cone_1_2_10_10.3d  cone_1_2_4_3.3d  lighting.xml  plane_2_3.3d  sphere_1_20_20.3d  textures.xml
delivery/phase4/solar-system/: config.xml
src/engine/: CMakeLists.txt  Color.h  config.cpp  config.h  main.cpp
src/engine/opengl/: BoundingSphere.cpp  BoundingSphere.h  Frustum.cpp  Frustum.h  Mat4x4.cpp  Mat4x4.h  OpenGlCamera.cpp  OpenGlCamera.h  OpenGlGroup.cpp  OpenGlGroup.h  OpenGlScene.cpp  OpenGlScene.h  OpenGlShaderProgram.cpp  OpenGlShaderProgram.h  OpenGlSkybox.cpp  OpenGlSkybox.h  OpenGlWindow.cpp  OpenGlWindow.h
src/engine/opengl/light/: OpenGlDirectionalLight.cpp  OpenGlDirectionalLight.h  OpenGlLight.h  OpenGlPointLight.cpp  OpenGlPointLight.h  OpenGlSpotLight.cpp  OpenGlSpotLight.h
src/engine/opengl/model/: OpenGlLineModelBuffer.cpp  OpenGlLineModelBuffer.h  OpenGlModelBuffer.h  OpenGlModelColour.cpp  OpenGlModelColour.h  OpenGlModelDrawer.h  OpenGlModelTexture.cpp  OpenGlModelTexture.h  OpenGlTriangleModelBuffer.cpp  OpenGlTriangleModelBuffer.h  OpenGlTriangleModelDrawer.cpp  OpenGlTriangleModelDrawer.h  OpenGlTriangleModelNormalDrawer.cpp  OpenGlTriangleModelNormalDrawer.h
src/engine/opengl/transform/: OpenGlCatmullRomTranslate.cpp  OpenGlCatmullRomTranslate.h  OpenGlRotate.cpp  OpenGlRotate.h  OpenGlScale.cpp  OpenGlScale.h  OpenGlTransform.h  OpenGlTranslate.cpp  OpenGlTranslate.h
src/generator/: BezierPatch.cpp  BezierPatch.h  CMakeLists.txt  ImprovedPrimitiveGenerator.cpp  ImprovedPrimitiveGenerator.h  PatchFileParser.cpp  PatchFileParser.h  main.cpp
src/model/: CMakeLists.txt  Model.cpp  ModelBuilder.cpp  Point.cpp  TextureCoord.cpp  Vector.cpp  Vertex.cpp
src/model/include/model/: Face.h  Model.h  ModelBuilder.h  Point.h  TextureCoord.h  Vector.h  Vertex.h
src/model/include/model/serialise/: ModelSerialiser.h  ObjSerialiser.h
src/model/serialise/: ObjSerialiser.cpp
src/tinyxml/: CMakeLists.txt  tinyxml2.cpp
